# ComfyUI-CoachBate

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  contains_search.py  generate_video.py  metadata_safety.py  migrate_workflows.py  nodes.py  nodes_audio_schedule.py  nodes_ltx_freefuse.py  nodes_lyrics_json.py  nodes_metadata_safety.py  nodes_numbered_text.py  nodes_text_preview_edit.py  pyproject.toml  routes.py  submit_workflow.py  test_full_generation.py  test_phase1.py  workflow_path_autofix_overrides.txt
.github/workflows/: publish.yml
example_workflows/: ABERCROM-ME IC-LoRA by coachbate-v3.json
ltx_director/: __init__.py  ltx_director.py  ltx_director_guide.py
ltx_freefuse/: __init__.py  attention_replace.py  lora_hook.py  mask_utils.py  token_utils.py
tests/: mru.test.mjs  pathUtils.test.mjs  pins.test.mjs  queryParser.test.mjs  test_contains_search.py  workflowIndex.test.mjs
web/: ltx_director.js
web/js/: coachBateBatchPrompter.js  coachBateGutter.js  coachBateMetadataSafety.js  coachBateNumberedText.js  coachBateShotLoader.js  coachBateTextPreviewEdit.js  coachBateWorkflowsPlus.js  workflowModelPathAutoFix.js
web/js/workflows_plus/: mru.js  pathUtils.js  pins.js  queryParser.js  virtualList.js  workflowIndex.js
