[project]
name = "ComfyUI-CoachBate"
description = "Alpha-stage, personal quality-of-life nodes for ComfyUI. Highlights: Workflows+, a fast sidebar panel that searches workflow names AND contents (tested with ~8,000 workflows) and can move/rename/delete files and folders; a Model Path Auto-Fix that resolves models/LoRAs saved under different folder names via configurable overrides; and Text Preview and Edit, an editable pass-through node whose resolved value is saved into the workflow's metadata. See README for the full node list."
version = "0.2.4"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/CoachBate/ComfyUI-CoachBate"

[tool.comfy]
PublisherId  = "coachbate"
DisplayName  = "CoachBate"
Icon         = ""
